<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/prop_fav_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fav_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_stub"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/iv_fav_weather"
        android:layout_width="@dimen/daily_temp_width"
        android:layout_height="@dimen/item_hourly_view_height"
        android:layout_marginEnd="@dimen/margin_large"
        android:contentDescription="@string/hourly_forecast_icon_description"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fav_location"
        app:layout_constraintEnd_toStartOf="@id/tv_fav_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_fav_location"
        app:srcCompat="@drawable/ic_09d_96px"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_fav_temp"
        android:layout_width="@dimen/daily_temp_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_tiny_plus"
        android:includeFontPadding="false"
        android:text="@string/temp_stub"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_medium_plus"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fav_location"
        app:layout_constraintEnd_toStartOf="@id/iv_fav_remove"
        app:layout_constraintTop_toTopOf="@+id/tv_fav_location"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/div_fav_remove"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_fav_remove"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_fav_remove"
        android:layout_width="@dimen/daily_temp_width"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fav_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_fav_location"
        app:srcCompat="@drawable/ic_trash"
        tools:ignore="ContentDescription,TextContrastCheck" />

    <View
        android:id="@+id/prop_fav_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/margin_tiny_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fav_location" />

</androidx.constraintlayout.widget.ConstraintLayout>